<resources>
    <string name="app_name">vibe</string>
    <string name="login">Login to Your Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or_login_with">Or login with</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_phone_number">Continue with phone number</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="create_your_account">Create your account</string>
    <string name="user_name">User Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="verify">Verify</string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="name_song">Kwaku the Traveller</string>
    <string name="name_artist">Black Sherif</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="settings">Settings</string>
    <string name="scan_album">Scan Album</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="kwaku_the_traveller">Kwaku the Traveller</string>
    <string name="black_sherif">Black Sherif</string>
    <string name="_0_00">0:00</string>
    <string name="_3_05">3:05</string>
    <string name="enter_your_otp_here">Enter Your OTP here</string>
    <string name="send_otp">Send OTP</string>
    <string name="dont_receive_otp">Didn\'t receive the code?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="enter_your_confirm_password">Enter your confirm password</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="bonjour">Bonjour</string>
    <string name="Pretty_girl_cheat_codes_x_cade_remix">Pretty Girl - Cheat Codes X CADE Remix</string>
    <string name="maggie_lindermann">Maggie Lindermann</string>
    <string name="liked">Liked</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="add_new_playlist">Add New Playlist</string>
    <string name="give_your_playlist_a_name">Give your playlist a name</string>
    <string name="descrption">Scan Qr to enjoy music with your friends</string>
</resources>