<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginPhoneFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="@dimen/_20dp"
        android:adjustViewBounds="true"
        android:src="@drawable/left_arrow" />

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_marginVertical="@dimen/_50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_20dp"
            android:text="@string/login"
            android:textColor="#F5F5FA"
            android:textSize="@dimen/_20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_16dp"
            android:background="@drawable/button_border_gray_flat"
            android:paddingHorizontal="@dimen/_8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:hint="@string/enter_your_otp"
                android:inputType="number"
                android:textColor="@color/fifty_percent_black_overlay"
                android:textColorHint="#A9B1C7"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="2dp"
            android:backgroundTint="#E80A0A"
            android:text="@string/log_in"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_1dp" />
    </LinearLayout>

</FrameLayout>